# pypilot-cxx

./: ARCHITECTURE.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: build.yml
examples/: linux_autopilot_main.cpp
src/: async_event_loop.hpp
src/async_event_loop/: event_loop.hpp  protocol_reader.hpp
src/pypilot/: autopilot.cpp  boatimu.cpp  client.cpp  config.hpp  nmea.cpp  platform.hpp  pypilot.hpp  resolv.hpp  rudder.cpp  sensors.cpp  server.cpp  servo.cpp  tacking.cpp  values.cpp
src/pypilot/pilots/: basic.cpp  deadzone.cpp  gps.cpp  intellect.cpp  learning.cpp  pilot.cpp  pilot.hpp  rate.cpp  simple.cpp  vmg.cpp  wind.cpp
src/pypilot/syslib/: data_model.hpp  event_loop.hpp  event_loop_arduino.hpp  event_loop_linux.hpp  nmea0183.hpp  servo_protocol.hpp
tests/: test_autopilot.cpp  test_nmea.cpp  test_resolv.cpp  test_server.cpp  test_servo_protocol.cpp  test_values.cpp
